Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = 5
            output "passed"
        end
    end
end
