Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanIntObjField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        Integer var
        var:SetValue(5)
        return var
    end
end